# synthesis_handwritting_creator

./: .gitignore  check_images.py  statistic.py
generate_syn_image/: VN_line_dataset.txt  VN_word_dataset.txt  blank_background.py  functions.py  normalize_image.py  render.py  test_font.py
generate_syn_image/background_color_channels/: a01-a01-000u.txt  a01-a01-000x.txt  a01-a01-003.txt  a01-a01-003u.txt  a01-a01-003x.txt  a01-a01-007.txt  a01-a01-007u.txt  a01-a01-007x.txt  a01-a01-011.txt  a01-a01-011u.txt  a01-a01-011x.txt  a01-a01-014.txt  a01-a01-014u.txt  a01-a01-014x.txt  a01-a01-020.txt  a01-a01-020u.txt  a01-a01-020x.txt  a01-a01-026.txt  a01-a01-026u.txt  a01-a01-026x.txt  a01-a01-030.txt  a01-a01-030u.txt  a01-a01-030x.txt  a01-a01-038.txt  a01-a01-038x.txt  a01-a01-043.txt  a01-a01-043u.txt  a01-a01-043x.txt  a01-a01-049.txt  a01-a01-049u.txt  a01-a01-049x.txt  a01-a01-053.txt  a01-a01-053u.txt  a01-a01-053x.txt  a01-a01-058.txt  a01-a01-058u.txt  a01-a01-058x.txt  a01-a01-063.txt  a01-a01-063u.txt  a01-a01-063x.txt  (+1499 more)
generate_syn_image/color_channels/: a01-a01-000u.txt  a01-a01-000x.txt  a01-a01-003.txt  a01-a01-003u.txt  a01-a01-003x.txt  a01-a01-007.txt  a01-a01-007u.txt  a01-a01-007x.txt  a01-a01-011.txt  a01-a01-011u.txt  a01-a01-011x.txt  a01-a01-014.txt  a01-a01-014u.txt  a01-a01-014x.txt  a01-a01-020.txt  a01-a01-020u.txt  a01-a01-020x.txt  a01-a01-026.txt  a01-a01-026u.txt  a01-a01-026x.txt  a01-a01-030.txt  a01-a01-030u.txt  (+1510 more)
recorrect_label/: check_image.py  recorrect_label.py
sampling_data/: CMakeLists.txt  process_image.cpp  process_image.py
